--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,14 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+{% get_static_prefix as baseUrl %}
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'dailyreport.style.css' %}">
-  <title>todo</title>
+  <link rel="stylesheet" href="{{ baseUrl }}{{ app_name }}/style.css">
+  <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
   <div class="container">
@@ -20,7 +21,10 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.0/dist/js.cookie.min.js"></script>
-  <script src="{% static 'dailyreport.main.js' %}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue-js-modal@1.3.28"></script>
+  {% block script %}
+  {% endblock %}
+  <script src="{{ baseUrl }}{{ app_name }}/main.js"></script>
 
 </body>
 </html>
