生jsでの実装 初期表示処理

--- a/static/dailyreport/style.css
+++ b/static/dailyreport/style.css
@@ -2,6 +2,10 @@
   background-color:unset;
 }
 
+.modal-area {
+  display: none;
+}
+
 .modal-area-inner{
   padding: 10px;
   box-sizing: border-box;
