--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,9 @@
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
-  <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.0/dist/js.cookie.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue-js-modal@1.3.28"></script>
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <script crossorigin src="..."></script>
   {% block script %}
   {% endblock %}
   <script src="{{ baseUrl }}{{ app_name }}/main.js"></script>
